src/assets/styles/_base.css
/* ... */
::-webkit-scrollbar:hover {
	background-color: var(--highlight-color);
	scrollbar-color: var(--highlight-color) transparent !important;
}

/* Track */
::-webkit-scrollbar-track {
	background-color: transparent;
}

/* Handle */
::-webkit-scrollbar-thumb {
	background-color: var(--primary-color);
	scrollbar-color: var(--primary-color);
	border-radius: 6px;
	border: 0px transparent;
}

header {
	background-color: var(--secondary-color);
	border-color: var(--secondary-color);
	height: 96px;
	display: flex;
	align-items: center;
	position: relative;
	flex-direction: row;
}

.title {
	z-index: 1;
	background-color: var(--primary-color);
	border-color: var(--primary-color);
	width: 700px;
	height: 100%;
	display: inline-flex;
	align-items: center;
	-moz-column-gap: 1em;
	column-gap: 1em;
}

.title .title-container {
	display: flex;
	flex-direction: column;
}

.title #title-header {
	font-size: 32px;
	margin: 0%;
	align-self: center;
	font-family: "Big Shoulders Display", cursive;
	font-weight: 800;
	text-transform: uppercase;
	letter-spacing: 0.12em;
}

.title #title-subheader {
	font-size: 32px;
	margin: 0%;
	align-self: center;
	font-family: "Big Shoulders Display", cursive;
	font-weight: 600;
	text-transform: uppercase;
	letter-spacing: 0.12em;
	padding-left: 0.32em;
}

.title #subtitle-header {
	font-size: 24px;
	margin: 0%;
	align-self: center;
	font-family: "Big Shoulders Display", cursive;
	font-weight: 600;
	text-transform: uppercase;
	letter-spacing: 0.08em;
}

.title #subtitle-subheader {
	font-size: 24px;
	margin: 0%;
	align-self: center;
	font-family: "Big Shoulders Display", cursive;
	font-weight: 700;
	text-transform: uppercase;
	letter-spacing: 0.8em;
	padding-left: 0.32em;
}

.logo {
	width: 50px;
	height: 80px;
	margin-left: 15px;
}

.title-row {
	width: 100%;
}

#title-first-line {
	border-bottom: 1px solid #000;
}

.rhombus {
	z-index: 0;
	transform: skew(-0.785398rad);
	background-color: var(--primary-color);
	border-color: var(--primary-color);
	width: 40px;
	height: 100%;
	display: inline-flex;
	margin-left: -30px;
}

.rhombus-back {
	transform: skew(0.785398rad) !important;
	background-color: var(--primary-color);
	border-color: var(--primary-color);
	width: 40px;
	height: 52px;
	display: inline-block;
	position: relative;
	left: -2.5em;
}

.planet-location-container {
	display: flex;
	flex-direction: row;
	position: absolute;
	right: 25px;
}

header video {
	width: 86px;
	height: 86px;
	align-self: center;
}

div .location-info {
	padding: 10px;
	margin-left: 20px;
	display: flex;
	align-items: flex-end;
	justify-content: space-between;
	flex-direction: column;
	color: var(--text-location);
}

header video,
div.location-info {
	opacity: 1;
}

.location-row {
	height: 40px;
	width: 100%;
	display: flex;
	flex-direction: row-reverse;
}

.location-row h4 {
	margin: 0px;
	line-height: 1.5em;
	font-family: "Raleway", sans-serif;
	font-size: 10px;
	font-weight: 800;
	text-transform: uppercase;
	letter-spacing: 3px;
}

.location-row .subtitle {
	font-size: 18px;
	margin: 0%;
	align-self: center;
	font-family: "Big Shoulders Display", cursive;
	font-weight: 800;
	text-transform: uppercase;
	letter-spacing: 0.1em;
}

.location-row div {
	padding: 0px 15px;
}

.location-row #planet {
	flex-grow: 1;
}

.location-row #year {
	width: 75px;
	border-left: 1px solid var(--location-separator);
	padding-right: 0px;
	height: 100;
}

.location-row #gate {
	border-left: 1px solid var(--location-separator);
}

.location-row #ring {
	border-left: 1px solid var(--highlight-hover);
	padding-right: 0px;
}

.page-wrapper {
	display: flex;
	flex-direction: column;
	height: 100vh;
}

.sidebar-page {
	display: flex;
	flex-direction: column;
	flex: 1;
}

.sidebar-layout {
	display: flex;
	flex-direction: row;
	min-height: 100%;
}

.o-side__content {
	background-color: var(--primary-color);
	height: 100%;
	width: 90px;
	padding-right: 0.5em;
	padding-top: 1em;
	text-align: center;
}

.sidebar-layout img {
	width: 48px;
	height: 48px;
}

.sidebar-layout a,
.sidebar-layout a:visited {
	font-family: "Roboto", sans-serif;
	letter-spacing: 0.5px;
	text-transform: uppercase;
	font-size: 12px;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
	display: flex;
	flex-direction: column;
	align-items: center;
	margin-bottom: 1em;
	text-decoration: none;
	color: var(--text-headers);
}

.sidebar-layout a.router-link-exact-active {
	font-family: "Roboto", sans-serif;
	letter-spacing: 0.5px;
	text-transform: uppercase;
	font-size: 12px;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
	display: flex;
	flex-direction: column;
	align-items: center;
	background: white;
	margin-bottom: 1em;
	text-decoration: none;
}

.clipped-bottom-right {
	clip-path: polygon(0 0, 100% 0, 100% calc(100% - 12px), calc(100% - 12px) 100%, 0 100%);
	-webkit-clip-path: polygon(0 0, 100% 0, 100% calc(100% - 12px), calc(100% - 12px) 100%, 0 100%);
}

div#router-view-container {
	position: absolute;
	top: 95px;
	left: 90px;
}

div .content-container {
	display: flex;
	flex-direction: row;
}

section.section-container {
	display: flex;
	flex-direction: column;
	margin: 50px 30px;
	width: 393px;
	height: 100%;
}

section.section-container#assignment {
	display: flex;
	flex-direction: column;
	width: 786px;
	height: 714px;
}

section.section-container#reserves,
section.section-container#clocks {
	display: flex;
	flex-direction: column;
	margin: 30px 30px;
	width: 343px;
	height: 377px;
}

section.section-container#reserves {
	margin-top: 15px;
}

section.section-container#events-logs {
	display: flex;
	flex-direction: column;
	margin: 50px 90px;
	width: 1179px;
	height: 714px;
}

section.section-container#events-logs .rhombus-back {
	top: -2em;
	left: -2em;
}

.event-list-container {
	height: 666px;
}

section.section-container#pilots {
	display: flex;
	flex-direction: column;
	margin: 50px 30px;
	width: 1755px;

}

section.section-container#pilots .rhombus-back {
	top: -2em;
	left: -2em;
}
/* ... */

